# NikkaLink

./: .env.example  .gitignore  Dockerfile  FRONTEND_UX_POLISH_REPORT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_allow_anonymous_urls.py  003_link_intelligence_platform.py
app/: main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  redis_client.py  security.py
app/db/: base.py  session.py  validation.py
app/events/: __init__.py  bus.py  registry.py  types.py
app/middleware/: correlation_id.py  logging.py  rate_limiter.py  request_id.py
app/models/: __init__.py  analytics_aggregate.py  click.py  collection.py  health.py  metadata.py  summary.py  url.py  user.py
app/repositories/: analytics_aggregate.py  base.py  click.py  collection.py  health.py  metadata.py  summary.py  url.py  user.py
app/schemas/: analytics.py  auth.py  common.py  feedback.py  health.py  intelligence.py  url.py
app/services/: analytics.py  analytics_aggregation.py  auth.py  cache.py  cache_invalidation.py  collections.py  health_monitor.py  intelligence.py  metadata.py  (+3 more)
docs/: RENDER_DEPLOYMENT.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  prisma-test.ts  prisma.config.ts  proxy.ts  vercel.json
scripts/: docker-entrypoint.sh  verify_production.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_events.py  test_intelligence.py  test_rate_limiting.py  test_redirect.py  test_urls.py
(+116 files in other folders)
